# MMU_Hack_Data

./: MMU_Hack_getting_started.ipynb  pyproject.toml  to_do.txt
datasets/: data_dict.csv  raw_val_oct_2024.snappy.parquet
meta/: to_do.txt
notebooks/: MMU_Hack_EDA.ipynb  MMU_Hack_getting_started.ipynb
